add config props

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,11 @@
   }
 }
 
+.box {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
