--- a/src/App.css
+++ b/src/App.css
@@ -44,4 +44,5 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: rgba(0,0,0,0);
 }
