--- a/example/index.css
+++ b/example/index.css
@@ -5,13 +5,13 @@ body {
 }
 
 .container {
+  width: 100%;
   height: 60vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.cropper {
-  border: 1px solid #f40;
-  box-sizing: border-box;
-  width: 50%;
-  height: 50%;
-  float: left;
-}
+
